fixed vertical spacing on home page cool stuff..

--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -179,10 +179,13 @@ ul.homepage-resources {
 }
 
 .featured-and-latest {
-  padding:20px 0;
+  padding:30px 0;
   h4 {
     font-weight: 600;
     font-size: 20px;
+  }
+  h3 {
+    margin-bottom: 10px;
   }
 }
 
